[tool.poetry]
name = "poetry_project"
version = "0.1.0"
description = "Poetry Project"
authors = ["Jonathon Vandezande"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/jevandezande/poetry_project"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pre-commit = "*"
ruff = ">=0.3.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.mypy]
files = ["poetry_project", "tests"]
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests", "poetry_project"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
